[package]
name = "hacksguard"
version = "0.1.0"
edition = "2021"
description = "TUI malware analysis tool"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
goblin = "0.9"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
boreal = "1.1.0"
iced-x86 = "1.21.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde_json = "1.0.150"

[profile.release]
opt-level = 3
lto = true
